# webgpu-test

./: Cargo.toml  build.rs
src/: main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
