[package]
name = "wgpu-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu="0.17.0"
bytemuck = { version = "1.12", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.2.5"
winit = "0.28"
anyhow = "1.0"
cgmath = "0.18"
cfg-if = "1"
tobj = { version = "3.2.1", features = ["async"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"